[gd_scene load_steps=45 format=3 uid="uid://bpkjgdxj4w1c3"]

[ext_resource type="PackedScene" uid="uid://cfyncxwjlvw0v" path="res://Scenes/Assigned Shapes/assigned_shapes.tscn" id="1_23prg"]
[ext_resource type="Script" path="res://Scenes/Levels/Levels.gd" id="1_s7wna"]
[ext_resource type="PackedScene" uid="uid://b4e80mv55y453" path="res://Scenes/Hints/hints.tscn" id="2_qll7g"]
[ext_resource type="PackedScene" uid="uid://d1s6kaaw7tf2l" path="res://Scenes/Receiver Shapes/alt_receivers.tscn" id="3_7ky36"]
[ext_resource type="PackedScene" uid="uid://d0jbkh7knwqo" path="res://Scenes/Receiver Shapes/receivers.tscn" id="4_i70i7"]
[ext_resource type="PackedScene" uid="uid://elgpgmehfkrw" path="res://Scenes/score_text.tscn" id="5_q7k4a"]
[ext_resource type="PackedScene" uid="uid://dng3h5awxp8ai" path="res://Scenes/Sequences/sequenceA.tscn" id="7_i1218"]
[ext_resource type="Script" path="res://Scenes/Sequences/sequence_manager.gd" id="7_p44fw"]
[ext_resource type="PackedScene" uid="uid://58fdkmw6jve0" path="res://Scenes/Sequences/sequenceB.tscn" id="9_tq3wd"]
[ext_resource type="PackedScene" uid="uid://d0jp0dgwghf53" path="res://Scenes/Sequences/sequenceC.tscn" id="10_1c17x"]
[ext_resource type="PackedScene" uid="uid://cm3ai6n5wd26p" path="res://Scenes/Sequences/sequenceD.tscn" id="11_lhrob"]
[ext_resource type="PackedScene" uid="uid://c7bl7wpg233dn" path="res://Scenes/Sequences/sequenceE.tscn" id="12_61go8"]
[ext_resource type="AudioStream" uid="uid://dr56g236sgrt7" path="res://Audio/Shape Beats_Level One_SectionA_One.wav" id="13_b7low"]
[ext_resource type="PackedScene" uid="uid://dl2enca3r1d2n" path="res://Scenes/Sequences/sequenceF.tscn" id="13_v4d05"]
[ext_resource type="AudioStream" uid="uid://8rtfcrn2a2ja" path="res://Audio/Shape Beats_Level One_SectionA_Two.wav" id="14_agxh7"]
[ext_resource type="AudioStream" uid="uid://daqi0ilydttx3" path="res://Audio/Shape Beats_Level One_SectionB_One.wav" id="15_g1t2h"]
[ext_resource type="AudioStream" uid="uid://8fpw0xq5emhw" path="res://Audio/Shape Beats_Level One_SectionB_Two.wav" id="16_rgn55"]
[ext_resource type="AudioStream" uid="uid://dlx6gjgc4b5bu" path="res://Audio/Shape Beats_Level One_SectionC_One.wav" id="17_4kqyk"]
[ext_resource type="AudioStream" uid="uid://cqd1x0rvlpdsn" path="res://Audio/Shape Beats_Level One_SectionC_Two.wav" id="18_0d383"]
[ext_resource type="Texture2D" uid="uid://blvmxccpyfarj" path="res://Sprites/visual_queue.png" id="20_oji1e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y5nxl"]
atlas = ExtResource("20_oji1e")
region = Rect2(384, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xgbs"]
atlas = ExtResource("20_oji1e")
region = Rect2(768, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mur7"]
atlas = ExtResource("20_oji1e")
region = Rect2(1152, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmt3n"]
atlas = ExtResource("20_oji1e")
region = Rect2(1536, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_3solc"]
atlas = ExtResource("20_oji1e")
region = Rect2(1920, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_86vjn"]
atlas = ExtResource("20_oji1e")
region = Rect2(2304, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr41o"]
atlas = ExtResource("20_oji1e")
region = Rect2(2688, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg2sg"]
atlas = ExtResource("20_oji1e")
region = Rect2(3072, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vkqb"]
atlas = ExtResource("20_oji1e")
region = Rect2(3456, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_syok3"]
atlas = ExtResource("20_oji1e")
region = Rect2(3840, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef1vk"]
atlas = ExtResource("20_oji1e")
region = Rect2(4224, 0, 384, 384)

[sub_resource type="SpriteFrames" id="SpriteFrames_4fgo5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5nxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xgbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mur7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmt3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3solc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86vjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr41o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg2sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vkqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syok3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef1vk")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jjqc7"]
atlas = ExtResource("20_oji1e")
region = Rect2(384, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_eghyb"]
atlas = ExtResource("20_oji1e")
region = Rect2(768, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj1f3"]
atlas = ExtResource("20_oji1e")
region = Rect2(1152, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyjjx"]
atlas = ExtResource("20_oji1e")
region = Rect2(1536, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6gg7"]
atlas = ExtResource("20_oji1e")
region = Rect2(1920, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_skra4"]
atlas = ExtResource("20_oji1e")
region = Rect2(2304, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn54q"]
atlas = ExtResource("20_oji1e")
region = Rect2(2688, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfqqu"]
atlas = ExtResource("20_oji1e")
region = Rect2(3072, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_81bfg"]
atlas = ExtResource("20_oji1e")
region = Rect2(3456, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j0du"]
atlas = ExtResource("20_oji1e")
region = Rect2(3840, 0, 384, 384)

[sub_resource type="AtlasTexture" id="AtlasTexture_teu1b"]
atlas = ExtResource("20_oji1e")
region = Rect2(4224, 0, 384, 384)

[sub_resource type="SpriteFrames" id="SpriteFrames_hhn5l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjqc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eghyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj1f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyjjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skra4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn54q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfqqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81bfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j0du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teu1b")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[node name="Level 1" type="Node2D"]
script = ExtResource("1_s7wna")
songLength = 41.739
bpm = 92.0
beatOffset = 0.75

[node name="Beats" type="Timer" parent="."]

[node name="Music Timer" type="Timer" parent="."]
one_shot = true

[node name="Assigned Shapes" parent="." instance=ExtResource("1_23prg")]
z_index = 4
position = Vector2(0, 0)

[node name="Hints" parent="." instance=ExtResource("2_qll7g")]
z_index = 3

[node name="Alt Hints" parent="." instance=ExtResource("2_qll7g")]
modulate = Color(0.5, 0.5, 0.5, 1)
z_index = 3

[node name="Alt Receivers" parent="." instance=ExtResource("3_7ky36")]
z_index = 2

[node name="Receivers" parent="." instance=ExtResource("4_i70i7")]
z_index = 2

[node name="Score Text" parent="." instance=ExtResource("5_q7k4a")]
z_index = 10

[node name="Sequencer" type="Node" parent="."]
script = ExtResource("7_p44fw")

[node name="SequenceA" parent="Sequencer" instance=ExtResource("7_i1218")]
receiverPattern = Array[int]([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1])
receiverOrientation = Array[int]([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
nextBeat = Array[float]([2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0])

[node name="SequenceB" parent="Sequencer" instance=ExtResource("9_tq3wd")]
receiverPattern = Array[int]([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2])
receiverOrientation = Array[int]([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
nextBeat = Array[float]([2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0])

[node name="SequenceC" parent="Sequencer" instance=ExtResource("10_1c17x")]
receiverPattern = Array[int]([2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3])
receiverOrientation = Array[int]([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
nextBeat = Array[float]([2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0])

[node name="SequenceD" parent="Sequencer" instance=ExtResource("11_lhrob")]
receiverPattern = Array[int]([3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4])
receiverOrientation = Array[int]([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
nextBeat = Array[float]([2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0])

[node name="SequenceE" parent="Sequencer" instance=ExtResource("12_61go8")]
receiverPattern = Array[int]([4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5])
receiverOrientation = Array[int]([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
nextBeat = Array[float]([2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0])

[node name="SequenceF" parent="Sequencer" instance=ExtResource("13_v4d05")]
receiverPattern = Array[int]([5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6])
receiverOrientation = Array[int]([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
nextBeat = Array[float]([2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0])

[node name="Exit Instruction" type="Label" parent="."]
offset_left = 424.0
offset_right = 744.0
offset_bottom = 40.0
text = "Press ESC any time to return to menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="Node" parent="."]

[node name="SectionA_One" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("13_b7low")

[node name="SectionA_Two" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("14_agxh7")

[node name="SectionB_One" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("15_g1t2h")

[node name="SectionB_Two" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("16_rgn55")

[node name="SectionC_One" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("17_4kqyk")

[node name="SectionC_Two" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("18_0d383")

[node name="Start Button" type="Button" parent="."]
offset_left = 512.0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 320.0
text = "Start"

[node name="Visual Queue" type="AnimatedSprite2D" parent="."]
position = Vector2(-232, -232)
sprite_frames = SubResource("SpriteFrames_4fgo5")

[node name="Alt Visual Queue" type="AnimatedSprite2D" parent="."]
position = Vector2(-232, -232)
sprite_frames = SubResource("SpriteFrames_hhn5l")
frame = 12
frame_progress = 1.0

[connection signal="timeout" from="Beats" to="." method="_on_beats_timeout"]
[connection signal="timeout" from="Music Timer" to="." method="_on_music_timer_timeout"]
[connection signal="pressed" from="Start Button" to="." method="_on_start_button_pressed"]
